[gd_scene load_steps=11 format=2]

[ext_resource path="res://Win.tscn" type="PackedScene" id=1]
[ext_resource path="res://Player.tscn" type="PackedScene" id=2]
[ext_resource path="res://Player2.tscn" type="PackedScene" id=3]
[ext_resource path="res://Material freeway/wallpaperfreeway.png" type="Texture" id=4]
[ext_resource path="res://Main.gd" type="Script" id=5]
[ext_resource path="res://Material freeway/PressStart2P-Regular.ttf" type="DynamicFontData" id=6]
[ext_resource path="res://Material freeway/sons/tema.wav" type="AudioStream" id=7]
[ext_resource path="res://Material freeway/sons/ganhou.wav" type="AudioStream" id=8]
[ext_resource path="res://Material freeway/sons/ponto.wav" type="AudioStream" id=9]

[sub_resource type="DynamicFont" id=1]
size = 30
font_data = ExtResource( 6 )

[node name="Main" type="Node"]
script = ExtResource( 5 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 4 )
centered = false
__meta__ = {
"_edit_lock_": true
}

[node name="Win" parent="." instance=ExtResource( 1 )]
position = Vector2( 638.66, 64 )

[node name="Player" parent="." instance=ExtResource( 2 )]
position = Vector2( 320, 696 )

[node name="Player2" parent="." instance=ExtResource( 3 )]
position = Vector2( 944, 696 )

[node name="TimerFastCars" type="Timer" parent="."]
wait_time = 0.3
autostart = true

[node name="TimerSlowCars" type="Timer" parent="."]
wait_time = 0.3
autostart = true

[node name="ScoreLabel1" type="Label" parent="."]
margin_left = 300.0
margin_top = 10.0
margin_right = 320.0
margin_bottom = 30.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 1, 0.984314, 0, 1 )
text = "0"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScoreLabel2" type="Label" parent="."]
margin_left = 923.0
margin_top = 10.0
margin_right = 968.0
margin_bottom = 40.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 1, 0.984314, 0, 1 )
text = "0"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ResultLabel" type="Label" parent="."]
margin_top = 10.0
margin_right = 1280.0
margin_bottom = 30.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 1, 0.984314, 0, 1 )
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Point" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )

[node name="Winner" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )

[node name="Theme" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )
volume_db = -17.0

[node name="Button" type="Button" parent="."]
margin_left = 494.0
margin_top = 320.0
margin_right = 794.0
margin_bottom = 400.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 1, 0.984314, 0, 1 )
text = "Restart"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="point" from="Player" to="." method="_on_Player_point"]
[connection signal="point2" from="Player2" to="." method="_on_Player2_point2"]
[connection signal="timeout" from="TimerFastCars" to="." method="_on_TimerFastCars_timeout"]
[connection signal="timeout" from="TimerSlowCars" to="." method="_on_TimerSlowCars_timeout"]
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
